Install date-fns before running blog post script

--- a/.github/workflows/update-blog-posts.yml
+++ b/.github/workflows/update-blog-posts.yml
@@ -19,7 +19,9 @@ jobs:
           node-version: '14' # Specify the Node.js version
 
       - name: Install dependencies
-        run: npm install rss-parser
+        run: |
+          npm install rss-parser
+          npm install date-fns
 
       - name: Run update script
         run: node updateReadme.js
